# ai_tracking

./: .env  .gitattributes  Dockerfile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
0_task/: checkpoint.md
src/: config.py
src/api/: index.html  main.py  schemas.py  utils.py
src/api/templates/: index.html
src/different_approach/: crowdhuman.onnx  main.py  requirements.txt  utils.py
src/different_approach/exp/: index.html
src/models/: yolov5n.onnx
src/tracking/: detector.py  tracker.py  utils.py  yolov5.py
src/visualization/: server.py
src/visualization/static/: app.js  index.html
